Added endpoint for historical price difference (#136)
